basic html structure added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,46 @@
 
 </head>
 <body>
-	<div>
+	<nav class="navbar" id="navbar">
+		<div class="navbar-nav flex-row">
+			<a class="nav-item nav-link" href="#welcome-section">Home</a>
+			<a class="nav-item nav-link" href="#projects">Projects</a>
+			<a class="nav-item nav-link" href="#contact">Contact</a>
+		</div>
+	</nav>
+	
+	<!-- Intro -->
+	<section id="welcome-section">
 		<h1>Welcome to my portfolio!</h1>
-	</div>
+	</section>
+	
+	<!-- Projectos -->
+	<section id="projects">
+		<div class="container">
+			<!-- una <section> por tematica de projects, a decidir... -->
+			
+			
+		</div>
+	</section>
+	
+	<!-- Info de Contacto -->
+	<section id="contact">
+		<h2>Info de contacto</h2>
+		<div class="contact">
+			<!-- en class va fontAwesome, ToDo buscar iconos de estas paginas y que quede lindo -->
+			<!-- Gmail -->
+			<div>
+				<a href="" class="" target="_blank"></a>
+			</div>
+			<!-- Linkedin -->
+			<div>
+				<a href="" class="" target="_blank"></a>
+			</div>
+			<!-- Github -->
+			<div>
+				<a href="" class="" target="_blank"></a>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
