--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Tomas Villagra</title>
+	<!-- anexo estilos -->
 	<link rel="stylesheet" href="style.css">
+	<!-- GoogleFonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;1,100&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet"> 
 	<!-- fontAwesome -->
 	<script src="https://kit.fontawesome.com/841a176e81.js" crossorigin="anonymous"></script>
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
+
 <body>
-	<nav class="navbar" id="navbar">
-		<div class="navbar-nav flex-row">
-			<a class="nav-item nav-link" href="#welcome-section">Home</a>
-			<a class="nav-item nav-link" href="#projects">Projects</a>
-			<a class="nav-item nav-link" href="#contact">Contact</a>
-		</div>
-	</nav>
-	
+	<header>
+		<nav id="navbar">
+			<ul id="nav-list">
+				<li>
+					<a class="nav-link" href="#projects-section">Portfolio</a>
+				</li>
+				<li>
+					<a class="nav-link" href="#about-section">About</a>
+				</li>
+				<li>
+					<a class="nav-link" href="#contact-section">Contact</a>
+				</li>
+				<li>
+					<!-- ToDo: una carpeta de assets con el CV version pdf para descarga -->
+					<!-- href tiene que apuntar al asset -->
+					<a class="nav-link" href="">CV</a>
+				</li>
+			</ul>	
+		</nav>
+	</header>
+
+	<main>
 	<!-- Intro -->
 	<section id="welcome-section">
-		<h1>Welcome to my portfolio!</h1>
+		<div id="welcome-container" class="text-center">
+			<h1>Tomas Villagra</h1>
+			<h3 class="italic">Software Developer</h3>
+		</div>
 	</section>
 	
 	<!-- Projectos -->
@@ -28,7 +59,11 @@
 			
 		</div>
 	</section>
-	
+	<!-- About -->
+	<section id="about-section">
+		
+	</section>
+
 	<!-- Info de Contacto -->
 	<section id="contact-section">
 		<div class="section-title text-center">
@@ -52,5 +87,8 @@
 			</div>			
 		</div>
 	</section>
+	
+	</main>
 </body>
+
 </html>
