added projects/about layout and navbar animations

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 					<a class="nav-link" href="#projects-section">Portfolio</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#about-section">About</a>
+					<a class="nav-link" href="#about-section">Presentación</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#contact-section">Contact</a>
+					<a class="nav-link" href="#contact-section">Contacto</a>
 				</li>
 				<li>
 					<!-- ToDo: una carpeta de assets con el CV version pdf para descarga -->
@@ -52,21 +52,103 @@
 	</section>
 	
 	<!-- Projectos -->
-	<section id="projects">
-		<div class="container">
-			<!-- una <section> por tematica de projects, a decidir... -->
-			
-			
+	<section id="projects-section" class="row">
+		<div class="projects-section-title text-center">
+			<h2>Proyectos</h2>
+		</div>
+		
+		<div class="projects-container">
+			<!-- Pomodoro Clock -->
+			<div class="project-tile">
+				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+					<img class="project-image" src="" alt="preview de pomodoro clock">
+				</a>
+				<div class="project-title">
+					<span class="project-title-effect">Pomodoro Clock</span>
+				</div>
+			</div>
+			<!-- JavaScript Calculator -->
+			<div class="project-tile">
+				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+					<img class="project-image" src="" alt="preview de calculadora JavaScript">
+				</a>
+				<div class="project-title">
+					<span class="project-title-effect">JavaScript Calculator</span>
+				</div>
+			</div>
+			<!-- DrumMachine -->
+			<div class="project-tile">
+				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+					<img class="project-image" src="" alt="preview de DrumMachine">
+				</a>
+				<div class="project-title">
+					<span class="project-title-effect">Drum Machine</span>
+				</div>
+			</div>
+			<!-- RandomQuote Generator -->
+			<div class="project-tile">
+				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+					<img class="project-image" src="" alt="preview de RandomQuote Generator">
+				</a>
+				<div class="project-title">
+					<span class="project-title-effect">RandomQuote Generator</span>
+				</div>
+			</div>
+			<!-- Markdown Previewer -->
+			<div class="project-tile">
+				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+					<img class="project-image" src="" alt="preview de Markdown Previewer">
+				</a>
+				<div class="project-title">
+					<span class="project-title-effect">Markdown Previewer</span>
+				</div>
+			</div>
+
 		</div>
 	</section>
+
 	<!-- About -->
 	<section id="about-section">
-		
+		<div class="about-section-title">
+			<h2>Acerca de mí</h2>
+		</div>
+		<!-- Insertar imagen de perfil-->
+		<div class="about-section-body">
+			<p>
+				Mi nombre es Tomas Villagra y vivo en Capital Federal. Actualmente soy estudiante de la Licenciatura en Ciencias de la Computación en la Facultad de Ciencias Exactas y Naturales de la UBA.
+			</p>
+			<p>
+				Me capacité en Desarrollo Web FullStack en <a class="about-text-link" href="https://www.freecodecamp.org/">FreeCodeCamp.org</a>, mientras completaba algunos proyectos personales que se pueden ver en mi página de <a href="https://github.com/villagrat" class="" target="_blank">GitHub</a>. Algunas de las tecnologías y recursos que uso y con los que estoy cómodo trabajando incluyen: 
+			</p>
+		</div>
+		<div class="about-section-icons">
+			<div class="icon-container">
+				<i></i>
+				<h4>HTML5</h4>
+			</div>
+			<div class="icon-container">
+				<i></i>
+				<h4>CSS3</h4>
+			</div>
+			<div class="icon-container">
+				<i></i>
+				<h4>JavaScript</h4>
+			</div>
+			<div class="icon-container">
+				<i></i>
+				<h4>React</h4>
+			</div>
+			<div class="icon-container">
+				<i></i>
+				<h4>Git</h4>
+			</div>
+		</div>
+
 	</section>
 
 	<!-- Info de Contacto -->
 	<section id="contact-section">
-		<div class="section-title text-center">
+		<div class="contact-section-title text-center">
 			<h2>Info de contacto</h2>
 		</div>
 		<div id="profile-link-container" class="text-center">
@@ -83,7 +165,7 @@
 			<!-- Github -->
 			<div class="contact">
 				<a href="https://github.com/villagrat" class="" target="_blank">
-					<i class="fab fa-github"></i> Github</a>
+					<i class="fab fa-github"></i> GitHub</a>
 			</div>			
 		</div>
 	</section>
