fixed apps href

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="projects-container">
 			<!-- Pomodoro Clock -->
 			<div class="project-tile">
-				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+				<a title="Ir a la página del proyecto" id="project-link" href="https://pomodoro-clock-villagrat.herokuapp.com/" target="_blank">
 					<img class="project-image" src="" alt="preview de pomodoro clock">
 				</a>
 				<div class="project-title">
@@ -69,7 +69,7 @@
 			</div>
 			<!-- JavaScript Calculator -->
 			<div class="project-tile">
-				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+				<a title="Ir a la página del proyecto" id="project-link" href="https://villagrat-react-calculator.herokuapp.com/" target="_blank">
 					<img class="project-image" src="" alt="preview de calculadora JavaScript">
 				</a>
 				<div class="project-title">
@@ -78,7 +78,7 @@
 			</div>
 			<!-- DrumMachine -->
 			<div class="project-tile">
-				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+				<a title="Ir a la página del proyecto" id="project-link" href="https://villagrat-drum-machine.herokuapp.com/" target="_blank">
 					<img class="project-image" src="" alt="preview de DrumMachine">
 				</a>
 				<div class="project-title">
@@ -87,7 +87,7 @@
 			</div>
 			<!-- RandomQuote Generator -->
 			<div class="project-tile">
-				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+				<a title="Ir a la página del proyecto" id="project-link" href="https://codepen.io/villagrat/full/BaWwRLR" target="_blank">
 					<img class="project-image" src="" alt="preview de RandomQuote Generator">
 				</a>
 				<div class="project-title">
@@ -96,7 +96,7 @@
 			</div>
 			<!-- Markdown Previewer -->
 			<div class="project-tile">
-				<a title="Ir a la página del proyecto" id="project-link" href="" target="_blank">
+				<a title="Ir a la página del proyecto" id="project-link" href="https://codepen.io/villagrat/full/xxqYXay" target="_blank">
 					<img class="project-image" src="" alt="preview de Markdown Previewer">
 				</a>
 				<div class="project-title">
@@ -133,6 +133,10 @@
 			<div class="icon-container">
 				<i></i>
 				<h4>JavaScript</h4>
+			</div>
+			<div class="icon-container">
+				<i></i>
+				<h4>C++</h4>
 			</div>
 			<div class="icon-container">
 				<i></i>
