about, contact, icons styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet"> 
 	<!-- fontAwesome -->
 	<script src="https://kit.fontawesome.com/841a176e81.js" crossorigin="anonymous"></script>
+	<!-- devIcon -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
 	<!-- Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
@@ -128,27 +130,27 @@
 		</div>
 		<div class="about-section-icons">
 			<div class="icon-container">
-				<i></i>
+				<i class="fab fa-html5 fa-3x" title="HTML5"></i>
 				<h4>HTML5</h4>
 			</div>
 			<div class="icon-container">
-				<i></i>
+				<i class="fab fa-css3-alt fa-3x" title="CSS3"></i>
 				<h4>CSS3</h4>
 			</div>
 			<div class="icon-container">
-				<i></i>
+				<i class="fab fa-js-square fa-3x" title="JavaScript"></i>
 				<h4>JavaScript</h4>
 			</div>
 			<div class="icon-container">
-				<i></i>
+				<i class="devicon-cplusplus-plain" title="C++"></i>
 				<h4>C++</h4>
 			</div>
 			<div class="icon-container">
-				<i></i>
+				<i class="fab fa-react fa-3x" title="React"></i>
 				<h4>React</h4>
 			</div>
 			<div class="icon-container">
-				<i></i>
+				<i class="devicon-git-plain" title="Git"></i>
 				<h4>Git</h4>
 			</div>
 		</div>
@@ -168,12 +170,12 @@
 			</div>
 			<!-- Linkedin -->
 			<div class="contact">
-				<a href="https://www.linkedin.com/in/tomas-villagra-a11323219/" target="_blank">
-					<i class="fab fa-linkedin"></i> Linkedin</a>
+				<a href="https://www.linkedin.com/in/tomas-villagra-a11323219/" title="Ir a la página de LinkedIn" target="_blank">
+					<i class="fab fa-linkedin"></i> LinkedIn</a>
 			</div>
 			<!-- Github -->
 			<div class="contact">
-				<a href="https://github.com/villagrat" class="" target="_blank">
+				<a href="https://github.com/villagrat" title="Ir a la página de GitHub" target="_blank">
 					<i class="fab fa-github"></i> GitHub</a>
 			</div>			
 		</div>
