added profile pic, fixed navbar w css

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 		<div class="about-section-title">
 			<h2>Acerca de mí</h2>
 		</div>
+		<img src="https://i.ibb.co/Pz9Yg23/foto-de-perfil.jpg" title="Foto de perfil" class="about-image" alt="Foto de perfil"/>
 		<!-- Insertar imagen de perfil-->
 		<div class="about-section-body">
 			<p>
