--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						</div>
 					</a>	
 				</div>
-				<div class="project-tile-desc pomodoro-pos">
+				<div class="project-tile-desc fixed-bottom">
 					<ul>
 						<li>React</li>
 						<li>JavaScript</li>
@@ -87,7 +87,7 @@
 					</div>
 				</a>	
 			</div>
-			<div class="project-tile-desc calculator-pos">
+			<div class="project-tile-desc fixed-bottom">
 				<ul>
 					<li>React</li>
 					<li>JavaScript</li>
@@ -105,7 +105,7 @@
 				</a>
 			</div>
 			<!-- class fixed-bottom for Bugless viewport but ugly -->
-			<div class="project-tile-desc drum-pos">
+			<div class="project-tile-desc fixed-bottom">
 				<ul>
 					<li>React</li>
 					<li>JavaScript</li>
@@ -122,7 +122,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="project-tile-desc quote-pos">
+			<div class="project-tile-desc fixed-bottom">
 				<ul>
 					<li>JavaScript</li>
 					<li>jQuery</li>
@@ -139,7 +139,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="project-tile-desc markdown-pos">
+			<div class="project-tile-desc fixed-bottom">
 				<ul>
 					<li>JavaScript</li>
 					<li>CSS</li>
