--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 				<h4>React</h4>
 			</div>
 			<div class="icon-container">
+				<i class="fab fa-node fa-3x" title="Node.js"></i>
+				<h4>Node.js</h4>
+			</div>
+			<div class="icon-container">
 				<i class="devicon-git-plain" title="Git"></i>
 				<h4>Git</h4>
 			</div>
