added CV pdf and href

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<li>
 					<!-- ToDo: una carpeta de assets con el CV version pdf para descarga -->
 					<!-- href tiene que apuntar al asset -->
-					<a class="nav-link" href="">CV</a>
+					<a class="nav-link" href="/assets/CV_Tomas_Villagra_Espanol.pdf">CV</a>
 				</li>
 			</ul>	
 		</nav>
