fixed types and preview img

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             >
               <img
                 class="project-image"
-                src="https://i.ibb.co/t3vzBPw/url-short-942-842.png"
+                src="https://i.ibb.co/VNVj8xG/url-sort-ver2.png"
                 alt="preview de URL shortener"
               />
               <div class="project-title">
@@ -245,7 +245,7 @@
               />
               <div class="project-title">
                 <span class="project-title-effect"
-                  >Header Parser microservices</span
+                  >Header Parser microservice</span
                 >
               </div>
             </a>
@@ -302,7 +302,11 @@
             <h4>JavaScript</h4>
           </div>
           <div class="icon-container">
-            <i class="devicon-typescript-plain" title="TypeScript"></i>
+            <i
+              class="devicon-typescript-plain"
+              title="TypeScript"
+              style="font-size: 3vw"
+            ></i>
             <h4>TypeScript</h4>
           </div>
           <div class="icon-container">
@@ -314,11 +318,19 @@
             <h4>Node.js</h4>
           </div>
           <div class="icon-container">
-            <i class="devicon-mongodb-plain" title="Mongo"></i>
+            <i
+              class="devicon-mongodb-plain"
+              title="Mongo"
+              style="font-size: 3vw"
+            ></i>
             <h4>Mongo</h4>
           </div>
           <div class="icon-container">
-            <i class="devicon-jest-plain" title="Jest"></i>
+            <i
+              class="devicon-jest-plain"
+              title="Jest"
+              style="font-size: 3vw"
+            ></i>
             <h4>Jest</h4>
           </div>
           <div class="icon-container">
