added docker, updated CV file

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
+    />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -70,7 +74,7 @@
             <a class="nav-link" href="#contact-section">Contacto</a>
           </li>
           <li>
-            <a class="nav-link" href="/assets/CV_Tomas_Villagra_Espanol.pdf"
+            <a class="nav-link" href="/assets/TomasVillagra_CV_Espanol.pdf"
               >CV</a
             >
           </li>
@@ -325,6 +329,15 @@
             ></i>
             <h4>Mongo</h4>
           </div>
+          <div class="icon-container">
+            <i
+              class="devicon-docker-plain"
+              title="Docker"
+              style="font-size: 3vw"
+            ></i>
+            <h4>Docker</h4>
+          </div>
+
           <div class="icon-container">
             <i
               class="devicon-jest-plain"
