added feedback app

--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
         </div>
 
         <div class="projects-container">
+          <!-- FeedbackApp -->
+          <div class="project-tile">
+            <a
+              title="Ir a la página del proyecto"
+              id="project-link"
+              href="https://villagrat-feedback-app.herokuapp.com/"
+              target="_blank"
+            >
+              <img
+                class="project-image"
+                src="https://i.ibb.co/NnL1dw6/cropped2-feedbackapp.png"
+                alt="preview de FeedbackApp"
+              />
+              <div class="project-title">
+                <span class="project-title-effect">Feedback App</span>
+              </div>
+            </a>
+          </div>
+          <div class="project-tile-desc fixed-bottom">
+            <ul>
+              <li>React</li>
+              <li>JavaScript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
           <!-- Pomodoro Clock -->
           <div class="project-tile">
             <a
@@ -140,32 +166,6 @@
               />
               <div class="project-title">
                 <span class="project-title-effect">JavaScript Calculator</span>
-              </div>
-            </a>
-          </div>
-          <div class="project-tile-desc fixed-bottom">
-            <ul>
-              <li>React</li>
-              <li>JavaScript</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-          <!-- DrumMachine -->
-          <div class="project-tile">
-            <a
-              title="Ir a la página del proyecto"
-              id="project-link"
-              href="https://villagrat-drum-machine.herokuapp.com/"
-              target="_blank"
-            >
-              <img
-                class="project-image"
-                src="https://i.ibb.co/xL7H2JJ/croped-drummachine.png"
-                alt="preview de DrumMachine"
-              />
-              <div class="project-title">
-                <span class="project-title-effect">Drum Machine</span>
               </div>
             </a>
           </div>
