updated project tiles and CV

--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
         </div>
 
         <div class="projects-container">
+          <!-- GitHub Finder -->
+          <div class="project-tile">
+            <a
+              title="Ir a la página del proyecto"
+              id="project-link"
+              href="https://villagrat-github-finder.vercel.app/"
+              target="_blank"
+            >
+              <img
+                class="project-image"
+                src="https://i.ibb.co/chZsL79/gh-finder-cropped.png"
+                alt="preview de GitHub Finder"
+              />
+              <div class="project-title">
+                <span class="project-title-effect">GitHub Finder</span>
+              </div>
+            </a>
+          </div>
+          <div class="project-tile-desc fixed-bottom">
+            <ul>
+              <li>React</li>
+              <li>JavaScript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
           <!-- FeedbackApp -->
           <div class="project-tile">
             <a
@@ -151,32 +177,6 @@
             </ul>
           </div>
 
-          <!-- JavaScript Calculator -->
-          <div class="project-tile">
-            <a
-              title="Ir a la página del proyecto"
-              id="project-link"
-              href="https://villagrat-react-calculator.herokuapp.com/"
-              target="_blank"
-            >
-              <img
-                class="project-image"
-                src="https://i.ibb.co/nw0KXsm/croped3-calculator.png"
-                alt="preview de calculadora JavaScript"
-              />
-              <div class="project-title">
-                <span class="project-title-effect">JavaScript Calculator</span>
-              </div>
-            </a>
-          </div>
-          <div class="project-tile-desc fixed-bottom">
-            <ul>
-              <li>React</li>
-              <li>JavaScript</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
           <!-- URL Shortener -->
           <div class="project-tile">
             <a
